@@ -29,19 +29,20 @@ import com.io7m.cedarbridge.schema.typer.CBTypeCheckerFactory;
 import com.io7m.cedarbridge.tests.CBFakeLoader;
 import com.io7m.cedarbridge.tests.CBTestDirectories;
 import com.io7m.cedarbridge.tests.CBZip;
-import com.sun.source.util.JavacTask;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import javax.tools.SimpleJavaFileObject;
 import javax.tools.ToolProvider;
 import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.lang.module.ModuleFinder;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
+import java.util.Properties;
 import java.util.Set;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
@@ -53,6 +54,19 @@ public final class CBJavaStaticCompilation
 {
   private static final Logger LOG =
     LoggerFactory.getLogger(CBJavaStaticCompilation.class);
+
+  private static final Properties TEST_PATHS =
+    new Properties();
+
+  static {
+    try (var stream =
+           CBJavaStaticCompilation.class.getResourceAsStream(
+      "/com/io7m/cedarbridge/tests/testPaths.properties")) {
+      TEST_PATHS.load(stream);
+    } catch (final IOException e) {
+      throw new UncheckedIOException(e);
+    }
+  }
 
   private final CBBinderFactory binders;
   private final CBParserFactory parsers;
@@ -137,12 +151,16 @@ public final class CBJavaStaticCompilation
           "-Werror",
           "-Xdiags:verbose",
           "-Xlint:unchecked",
+          "--add-modules",
+          "ALL-MODULE-PATH",
+          "-p",
+          TEST_PATHS.getProperty("testDependenciesPath"),
           "-d",
           this.directory.toAbsolutePath().toString()
         );
 
       final var task =
-        (JavacTask) tool.getTask(
+        tool.getTask(
           null,
           fileManager,
           listener,
